--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
   font-size: 16px;
 }
 
+::selection {
+  background: #f4bc4488;
+}
+
 @media (prefers-color-scheme: dark) {
   body {
     background: #0d1116;
@@ -11,13 +15,19 @@ body {
   }
 }
 
+a,
+a:visited {
+  color: #0366d6;
+}
+
 .wrapper {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  max-width: 420px;
+  justify-content: center;
+  align-items: center;
 }
 
 .no-margin-top {
-  margin-top: 0;
+  margin-top: -5px;
 }
